@@ -345,7 +345,7 @@ public class SpecificUsersAuthorizationStrategyTest {
         wc.login("test1");
 
         // GET config.xml of srcProject (userid is set to test1)
-        String configXml = getConfigXml(wc.goToXml("%s/config.xml".formatted(srcProject.getUrl())));
+        String configXml = getConfigXml(wc.goToXml(String.format("%s/config.xml", srcProject.getUrl())));
 
         // POST config.xml of srcProject (userid is set to test1) to a new project.
         // This should success.
@@ -354,7 +354,7 @@ public class SpecificUsersAuthorizationStrategyTest {
         String projectName = destProject.getFullName();
 
         WebRequest req = new WebRequest(
-                new URL("%s%s/config.xml".formatted(wc.getContextPath(), destProject.getUrl())), HttpMethod.POST);
+                new URL(wc.getContextPath() + String.format("%s/config.xml", destProject.getUrl())), HttpMethod.POST);
         req.setAdditionalHeader(
                 j.jenkins.getCrumbIssuer().getCrumbRequestField(),
                 j.jenkins.getCrumbIssuer().getCrumb((jakarta.servlet.ServletRequest) null));
@@ -398,7 +398,7 @@ public class SpecificUsersAuthorizationStrategyTest {
         wc.login("test1");
 
         // GET config.xml of srcProject (userid is set to admin)
-        String configXml = getConfigXml(wc.goToXml("%s/config.xml".formatted(srcProject.getUrl())));
+        String configXml = getConfigXml(wc.goToXml(String.format("%s/config.xml", srcProject.getUrl())));
 
         // POST config.xml of srcProject (userid is set to admin) to a new project.
         // This should fail.
@@ -407,7 +407,7 @@ public class SpecificUsersAuthorizationStrategyTest {
         String projectName = destProject.getFullName();
 
         WebRequest req = new WebRequest(
-                new URL("%s%s/config.xml".formatted(wc.getContextPath(), destProject.getUrl())), HttpMethod.POST);
+                new URL(wc.getContextPath() + String.format("%s/config.xml", destProject.getUrl())), HttpMethod.POST);
         req.setAdditionalHeader(
                 j.jenkins.getCrumbIssuer().getCrumbRequestField(),
                 j.jenkins.getCrumbIssuer().getCrumb((jakarta.servlet.ServletRequest) null));
